# kadr

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust-clippy.yml
assets/: make_icon.py
src/: app.rs  config.rs  icon.rs  keybinds.rs  main.rs  monitor.rs
src/fs/: combine.rs  mod.rs  scanner.rs  sorter.rs
src/heif/: ffi.rs  mod.rs
src/libraw_native/: ffi.rs  mod.rs
src/media/: formats.rs  loader.rs  mod.rs
src/slideshow/: engine.rs  lua_script.rs  mod.rs
src/ui/: combine_dialog.rs  lua_editor.rs  mod.rs  settings_dialog.rs  thumbnail_strip.rs  toolbar.rs  video_controls.rs  viewer.rs  widgets.rs
src/video/: context.rs  mod.rs  mpv_ffi.rs  player.rs
