[package]
name = "kadr"
version = "1.3.0"
edition = "2024"
description = "A fast, minimal image viewer"

[[bin]]
name = "kadr"
path = "src/main.rs"

[features]
libheif = []
libraw-native = []

[dependencies]
eframe = { version = "0.35", default-features = false, features = [
  "default_fonts",
  "glow",
  "persistence",
] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
image = { version = "0.25", features = [
  "jpeg",
  "png",
  "gif",
  "webp",
  "bmp",
  "tiff",
] }
mozjpeg = "0.10"
rawloader = "0.37"
serde = { version = "1", features = ["derive"] }
toml = "1"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
walkdir = "2"
rand = "0.10"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rfd = "0.17"
scopeguard = "1"
lru = "0.16"
rayon = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[build-dependencies]
winres = "0.1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
